rust-examples/tests/compile-fail/Rule_9_5.rs
#![deny(clippy)]
#[deny(warnings)]

fn main() {
    let x: [i32] = [ 0, 1 ];
    println!("{:?}", x);
}
